--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -97,6 +97,12 @@
   color: white;
 }
 
+@media (max-width: 55em) {
+   .skills-container {
+      width: 80%;
+   }
+}
+
 @media (max-width: 40em) {
   .skills-container {
     min-height: 20rem;
